Correction de quelques bugs sur le CSS et début de la version tablette.

--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ header {
 
 #navSignin {
     color : var(--reserviablue);
-    font-weight: bolder;
+    font-weight: 900;
+    font-size: 18px;
 }
 
 
@@ -256,7 +257,6 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-between;
     width: 28%;
     height: 100%;
     border-radius: 5%;
@@ -266,23 +266,32 @@ main {
 #popularTitleBox {
     display: flex;
     align-items: center;
-    padding-right: 15px
+    justify-content: space-between;
+    padding-right: 15px;
+    height: 10%;
+}
+
+#popularLinksBox {
+    display: flex;
+    height: 90%;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .popularLinks {
-    height: 26%;
+    height: 30%;
     width: 100%;
     overflow: hidden;
     border: 4px solid white;
     border-radius: 10%;
-    object-fit: contain;
+    object-fit: fill;
     position: relative;
 }
 
 .popularImg {
     height: 100%;
     width: 50%;
-    size: cover
+    size: cover;
 }
 
 .popularDescription {
@@ -362,7 +371,49 @@ li {
     font-size: 15px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1024px) {
+    #hebergementBox {
+        height: auto;
+    }
+    #filterBar {
+        height: auto;
+    }
+    #popularCity {
+        order: 1;
+        width: 100%;
+        height: 400px;
+        margin-bottom: 15px;
+    }
+    #hebergementCity {
+        order: 2;
+        width: 100%;
+        height: 66%;
+    }
+    .hebergementLinks {
+        width: 50%;
+        height: 250px;
+    }
+    .popularLinks {
+        width: 30%;
+        height: 80%;
+    }
+    #popularLinksBox {
+        flex-direction: column;
+    }
+    .popularImg {
+        height: 100%;
+        width: 100%;
+        size: cover
+    }
+    .popularDescription {
+        height: 30%;
+        width: 100%;
+        bottom : 0;
+        left : 0;
+    }
+}
+
+@media (max-width: 600px) {
     header {
         height: auto;
         flex-wrap: wrap;
@@ -372,12 +423,12 @@ li {
         margin: 0px 15px;
         order: 1;
     }
+    #navSignin {
+        order: 2;
+    }
     #navBar {
         width: 100%;
         order: 3;
-    }
-    #navSignin {
-        order: 2;
     }
     .navLinks {
         width: 50%;
@@ -402,7 +453,6 @@ li {
         margin: 10px 15px;
     }
     #filterBar {
-        height: auto;
         margin: 20px 15px;
     }
     #hebergementBox, #activityCity {
@@ -410,19 +460,19 @@ li {
         border-radius: 0%;
     }
     #popularCity {
-        order: 1;
-        height: 33%;
-        margin-bottom: 15px;
+        height: 750px;
         border-radius: 0%;
     }
     #hebergementCity {
-        order: 2 ;
-        height: 66%;
         background-color: white;
     }
     #hebergementCity, #popularCity {
         width: 100%;
         padding: 25px;
+    }
+    #popularLinksBox {
+        flex-direction: column;
+        height: 600px;
     }
     #activityCity {
         padding: 25px;
